# neural-mesh

./: README.md  _config.yml  pyproject.toml  setup.py
docs/: ARCHITECTURE.md  QUICKSTART.md  index.html
neural_mesh/: __init__.py  neural_mesh.py
